# k8s-container

./: .env  Containerfile  Makefile  README.md  pyproject.toml
k8s_container/: __main__.py  utils.py
kubefile/: cmd-basic.yaml  cmd-config.yaml  cmd-secret.yaml
